Corrected error where lab tech wasn't displayed. For #47.

--- a/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
+++ b/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
@@ -802,7 +802,7 @@
                           </div>
                           <div class="col-xs-6">
                           	<select class="form-control" name="ltEntry" ng-model="ltEntry" required="true">
-                          		<option ng-repeat="lt in labtechs" id="{{lt.username}}" name="{{lt.username}}" ng-value="lt.usename">{{lt.username}}</option>
+                          		<option ng-repeat="lt in labtechs" id="{{lt.username}}" name="{{lt.username}}" ng-value="lt.username">{{lt.username}}</option>
                           	</select>
                           </div>
                         </div>
